--- a/src/proyecto1/Main.form
+++ b/src/proyecto1/Main.form
@@ -436,7 +436,7 @@
                         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="32" green="39" red="85" type="rgb"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Ingresar Nombre o Id:"/>
+                        <Property name="text" type="java.lang.String" value="Ingresar Id:"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="tf_buscarEmpresa1">
@@ -839,7 +839,7 @@
                         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="32" green="39" red="85" type="rgb"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Ingresar Nombre o Id:"/>
+                        <Property name="text" type="java.lang.String" value="Ingresar id:"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="tf_buscarEmpresa">
